<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/dl_main">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar"
            android:id="@+id/include_toolbar_main"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="238dp"
            app:layout_constraintTop_toBottomOf="@id/include_toolbar_main"
            android:layout_marginTop="42dp"
            android:id="@+id/fl_cover_main">

            <com.blogofyb.elf.views.customs.Wave
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                app:waveWidth="1dp"
                app:waveColor="@color/color_lyric"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:id="@+id/civ_cover_main"
                android:layout_gravity="center"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/color_cover_border"
                android:src="@drawable/ic_default_bottom_music_icon"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_song_name_main"
            android:textColor="@color/color_song_name_main"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fl_cover_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            tool:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_singer_name_main"
            android:textColor="@color/color_singer_name_main"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_song_name_main"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            tool:text="@string/app_name"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/iv_play_main"
            android:src="@drawable/ic_music_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_singer_name_main"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="165dp"
            android:layout_marginRight="31dp"
            android:layout_marginEnd="31dp" />

        <include layout="@layout/change_mood"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/iv_play_main"
            android:layout_marginTop="398dp"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="215dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/color_theme"
        android:clickable="true"
        android:focusable="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:id="@+id/civ_user_head_menu"
            android:src="@drawable/ic_disk_src"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="105dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="65dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_user_name_menu"
            android:textSize="16sp"
            android:textColor="@color/color_song_name_main"
            android:text="@string/username_menu"
            app:layout_constraintTop_toBottomOf="@+id/civ_user_head_menu"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp" />

        <FrameLayout
            android:layout_width="116dp"
            android:layout_height="39dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name_menu"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/fl_daily_recommend">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_recommend_chinese"
                android:textColor="@color/color_lyric"
                android:textSize="14sp"
                android:layout_gravity="end|top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_lyric"
                android:text="@string/daily_recommend_english"
                android:layout_gravity="end|bottom"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="108dp"
            android:layout_height="37dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_daily_recommend"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/fl_comments_plaza">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_plaza_chinese"
                android:textColor="@color/color_lyric"
                android:textSize="14sp"
                android:layout_gravity="end|top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_lyric"
                android:text="@string/comments_plaza_english"
                android:layout_gravity="end|bottom"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="108dp"
            android:layout_height="37dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_comments_plaza"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/fl_my_collection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collection_chinese"
                android:textColor="@color/color_lyric"
                android:textSize="14sp"
                android:layout_gravity="end|top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_lyric"
                android:text="@string/my_collection_english"
                android:layout_gravity="end|bottom"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="108dp"
            android:layout_height="37dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_my_collection"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/fl_setting">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_chinese"
                android:textColor="@color/color_lyric"
                android:textSize="14sp"
                android:layout_gravity="end|top"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_lyric"
                android:text="@string/setting_english"
                android:layout_gravity="end|bottom"/>

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.DrawerLayout>