<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_comment"
            android:textSize="18sp"
            android:textColor="@color/color_black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/iv_close_comment"
            android:src="@drawable/close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/color_tool_bar_bottom"
            app:layout_constraintTop_toBottomOf="@+id/iv_close_comment"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_comment"
            android:textSize="16sp"
            android:textColor="@color/color_singer_playing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_close_comment"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="27dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience_comment"
            android:textSize="16sp"
            android:textColor="@color/color_lyric"
            app:layout_constraintTop_toBottomOf="@+id/iv_close_comment"
            android:layout_marginTop="27dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp" />
        
    </android.support.constraint.ConstraintLayout>
    
    <android.support.v7.widget.RecyclerView
        android:layout_width="366dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/rv_comment_list_comment"
        android:layout_gravity="center"
        android:layout_marginTop="11dp">
    </android.support.v7.widget.RecyclerView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        
        <EditText
            android:layout_width="271dp"
            android:layout_height="30dp"
            android:id="@+id/et_input_comment"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edit_comment"/>
        
        <Button
            android:layout_width="60dp"
            android:layout_height="29dp"
            android:id="@+id/btn_publish_comment"
            android:textColor="@color/color_theme"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/bg_btn_publish"
            android:text="@string/publish_comment"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />
        
    </LinearLayout>

</LinearLayout>