<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="345dp"
    android:layout_height="418dp"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_cover_playing"
    android:padding="12dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/tv_date_record"
        android:textSize="16sp"
        tool:text="2019.05.19"
        android:textColor="@color/color_song_name_main"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/tv_describe_record"
        tool:text="这是今日份的开心，写点什么吧"
        android:textSize="12sp"
        android:textColor="@color/color_progress_playing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_record"
        android:layout_marginTop="12dp"/>
    
    <ImageView
        android:layout_width="31dp"
        android:layout_height="31dp" 
        android:id="@+id/iv_mood_record"
        android:src="@drawable/ic_mood_happy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/et_content_record"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_describe_record"
        android:layout_marginTop="23dp"
        android:textSize="14sp"
        android:textColor="@color/color_content_record"
        tool:text="ContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContentContent"
        android:textAlignment="textStart"
        android:gravity="start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_finish_record"
        android:text="@string/finish_record"
        android:textSize="16sp"
        android:textColor="@color/color_lyric"
        app:layout_constraintRight_toLeftOf="@+id/tv_cancel_record"
        app:layout_constraintTop_toTopOf="@+id/tv_skip_record"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cancel_record"
        android:text="@string/cancel_record"
        android:textSize="16sp"
        android:textColor="@color/color_lyric"
        app:layout_constraintRight_toLeftOf="@+id/tv_skip_record"
        app:layout_constraintTop_toTopOf="@+id/tv_skip_record"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_skip_record"
        android:text="@string/skip_record"
        android:textSize="16sp"
        android:textColor="@color/color_lyric"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_content_record"
        android:layout_marginTop="20dp"/>

</android.support.constraint.ConstraintLayout>